--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -1,19 +1,23 @@
 .Card {
-    background-color: red;
     border-radius: 10px;
     overflow: hidden;
-    border: 3px red;
+    border: 3px solid;
     margin: 10px;
+
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    min-width: 500px;
 }
 
 .Card .Title {
-    background-color: red;
     padding: 5px 0px;
     display: flex;
     justify-content: center;
 }
 
 .Card .Content {
+    flex: 1;
     background-color: #fff;
     color: #000;
     padding: 10px;
